infra/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brokenrobot-xyz-ingress
  namespace: brokenrobot-xyz
  labels:
    app: brokenrobot-xyz
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brokenrobot-xyz-service
                port:
                  number: 80
